Ajustando o vinculo Historico X Produto